# godaddy-github-one-shot-page

./: .env.example  .gitignore  .npmignore  CHANGELOG.md  CLAUDE.md  README.md  config.sample.json  package-lock.json  package.json
.github/workflows/: desktop-release.yml  release.yml
docs/: V2-MULTI-PROVIDER-TASKS.md  index.html  positioning-copy.md  why-this-exists.md
scripts/: build-binary.mjs  capture-screenshots.mjs  capture-settings.mjs  generate-mockups.mjs  mockup-prompts.md  render-cli-screenshots.mjs  render-desktop-screenshots.mjs  take-screenshots.mjs
src/: cli.ts  config.ts  index.ts  mcp-server.ts  types.ts  ui-server.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/commands/: apply.ts  forget.ts  list.ts  plan.ts  push.ts  status.ts  update.ts
src/lib/: update-checker.ts
src/services/: cloudflare.ts  dns-factory.ts  github-files.ts  github.ts  godaddy.ts  namecheap.ts
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css
