[package]
name = "gg-deploy"
version = "1.1.1"
description = "Free hosting deserves free tooling. Domain to GitHub Pages in 60 seconds."
authors = ["Abe Diaz <info@abediaz.ai>"]
license = "AGPL-3.0-only"
repository = "https://github.com/abe238/gg-deploy"
homepage = "https://github.com/abe238/gg-deploy"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "gg_deploy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
